# edge_ticker

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
backend/: db.py  ha_bridge.py  main.py  scheduler.py  state.py  ws.py
backend/api/: adsb.py  config.py  control.py  fantasy.py  ha.py  markets.py  sports.py
backend/collectors/: __init__.py  adsb.py  airquality.py  astro.py  base.py  fantasy.py  hurricanes.py  launches.py  news.py  proxmox.py  sports.py  stocks.py  weather.py  weather_alerts.py  weather_radar.py
config/: defaults.yaml
deploy/: 99-edge-ticker-input.rules  chromium-flags.txt  install.sh  kiosk.service  ticker-backend.service  ticker-watchdog.service  ticker-watchdog.timer  update.sh  watchdog.sh
deploy/cursor/blank/: index.theme
docs/: api.md
docs/mockups/: layout.html  layout2.html
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/admin/: admin.css  index.html  main.ts
frontend/admin/src/: app.tsx  main.tsx  state.ts  style.css
frontend/admin/src/tabs/: appearance.tsx  ha.tsx  modules.tsx  schedule.tsx  sources.tsx  system.tsx
frontend/display/: celebrate.ts  gestures.ts  icons.ts  index.html  main.ts  overlay-ha.ts  slippymap.ts  styles.css  tape.ts  types.ts  weather-alert.ts
frontend/display/modules/: adsb.ts  airquality.ts  astro.ts  basemap-tampa.ts  fantasy.ts  hurricanes.ts  launches.ts  markets.ts  news.ts  proxmox.ts  registry.ts  sports.ts  weather.ts  weather_radar.ts
frontend/shared/: themes.ts
scripts/: smoke_test.py  unit_checks.py
